--- a/SPLL_E110040/ui/ui.css
+++ b/SPLL_E110040/ui/ui.css
@@ -132,7 +132,11 @@ html, body {
 #dialogue-text {
   position: absolute;
   top: 0; left: 10%;
-  width: 100%; height: 100%;
+  /* ❌ 原本寫法：height: 100% (這樣文字視窗會跟黑框一樣高，文字就會碰到最底) */
+  /* height: 100%; */
+
+  /* ✅ 新寫法：高度扣掉 40px，讓視窗「縮短」，底部自然就空出來了 */
+  width: 100%; height: calc(100% - 40px);
   
   color: white;
   font-size: 1.1rem;
@@ -144,7 +148,7 @@ html, body {
   
   padding-left: 60px;
   padding-right: 60px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
   box-sizing: border-box;
 }
 
