--- a/SPLL_E110040/ui/ui.css
+++ b/SPLL_E110040/ui/ui.css
@@ -59,7 +59,7 @@ html, body {
   position: absolute;
   bottom: calc(var(--dialogue-height) + 20px);
   width: 100%;
-  height: 35vh;
+  height: 35%;
   pointer-events: none;
   z-index: 5;
 }
