--- a/SPLL_E110040/ui/ui.css
+++ b/SPLL_E110040/ui/ui.css
@@ -59,7 +59,7 @@ html, body {
   position: absolute;
   bottom: calc(var(--dialogue-height) + 20px);
   width: 100%;
-  height: 35%;
+  height: 755vh;
   pointer-events: none;
   z-index: 5;
 }
@@ -67,7 +67,7 @@ html, body {
 .avatar {
   position: absolute;
   bottom: 0;
-  max-height: 80vh; /* 調整立繪高度 */
+  max-height: 35vh; /* 調整立繪高度 */
   opacity: 0;
   transition: opacity .6s ease, filter .4s ease;
   animation: breathe 4s ease-in-out infinite;
